Update MCU firmware to version 2.4
1.Updated STM32F407VET6_BMC.elf to 2.4 version
2.Add COPYING and LICENSE files
3.Add version history information in README

Signed-off-by: linmin <linmin@eswincomputing.com>

--- a/mcu-firmware/README
+++ b/mcu-firmware/README
@@ -3,3 +3,24 @@ MCU using JTAG interface.
 
 For steps to flash MCU firmware, please refer to document
 "hifive-premier-p550-software-reference-manual.pdf".
+
+The MD5 mentioned below is the md5sum value of STM32F407VET6_BMC.elf.
+===============================================================================
+Release Notes
+===============================================================================
+
+-------------------------------------------------------------------------------
+Release Version: 2.4
+MD5:9304bded3b9f02d5b9ef3dbce3edee50
+-------------------------------------------------------------------------------
+
+-----------+
+Change Log |
+-----------+
+
+-------------------------------------------------------------------------------
+Version: 2.4, 2024-06-27
+MD5:9304bded3b9f02d5b9ef3dbce3edee50
+-------------------------------------------------------------------------------
+TR: Add checksum for SomPwrMgtDIPInfo
+-------------------------------------------------------------------------------
