Upload COPYING and LICENSE files for EsBurnTool.
1.Upload COPYING and LICENSE files for EsBurnTool.
2.Update the EsBurnTool executable file for the Linux platform.
  Please refer to the README file for the details of changelogs

Signed-off-by: linmin <linmin@eswincomputing.com>

--- a/esburn/linux/README
+++ b/esburn/linux/README
@@ -23,3 +23,26 @@ To flash kernel and/or rootfs to eMMC
 
 For more information, please refer to document
 "hifive-premier-p550-software-reference-manual.pdf".
+
+
+The MD5 mentioned below is the md5sum value of EsBurnTool.
+===============================================================================
+Release Notes
+===============================================================================
+
+-------------------------------------------------------------------------------
+Version: 2024-07-10
+MD5:0da36b8cea6ab2feca2e3cae787238d4
+-------------------------------------------------------------------------------
+
+-----------+
+Change Log |
+-----------+
+
+-------------------------------------------------------------------------------
+Version: 2024-07-10
+MD5:0da36b8cea6ab2feca2e3cae787238d4
+-------------------------------------------------------------------------------
+TR: Display burn progress bar
+CR: Change downloading addr to 0x10000000
+-------------------------------------------------------------------------------
