--- a/esburn/linux/README
+++ b/esburn/linux/README
@@ -13,13 +13,22 @@ Two seperate config.ini files are present in this directory.
 
 Usage: sudo EsBurnTool -c <config.ini file>
 
-For e.g:
---------
-To flash bootchain image to SPI Flash
-	sudo EsBurnTool -c spi_config.ini
+	For e.g:
+	--------
+	To flash bootchain image to SPI Flash
+		sudo EsBurnTool -c spi_config.ini
 
-To flash kernel and/or rootfs to eMMC
-	sudo EsBurnTool -c emmc_config.ini
+	To flash kernel and/or rootfs to eMMC
+		sudo EsBurnTool -c emmc_config.ini
+
+To update partition table, uncomment "erase_flash" parameter and
+"[mmc partition table]" section in emmc_config.ini file.
 
 For more information, please refer to document
 "hifive-premier-p550-software-reference-manual.pdf".
+
+---------------------------------------------------------
+Version : 2024-07-10
+MD5     : 0da36b8cea6ab2feca2e3cae787238d4
+---------------------------------------------------------
+
