Update esburn tool for linux and windows OS
Changelog:
1. Delete the parameters "flash_stg" and "erase_flash" in the config file
2. Add the parameter "serverip" : User-specified tftp serverip
3. Add the parameter "erase_partition" : Whether to erase emmc partition table y/n

Signed-off-by: xuxiang <xuxiang@eswincomputing.com>
Reviewed-by: ningyu <ningyu@eswincomputing.com>

--- a/esburn/linux/README
+++ b/esburn/linux/README
@@ -31,13 +31,22 @@ Release Notes
 ===============================================================================
 
 -------------------------------------------------------------------------------
-Version: 2024-07-10
-MD5:0da36b8cea6ab2feca2e3cae787238d4
+Version: 2024-07-27
+MD5:819453c4bb67c4499ea96c07bd6438ba
 -------------------------------------------------------------------------------
 
 -----------+
 Change Log |
 -----------+
+
+-------------------------------------------------------------------------------
+Version: 2024-07-27
+MD5:819453c4bb67c4499ea96c07bd6438ba
+-------------------------------------------------------------------------------
+CR: Delete the parameters "flash_stg" and "erase_flash" in the config file
+CR: Add the parameter "serverip" : User-specified tftp serverip
+CR: Add the parameter "erase_partition" : Whether to erase emmc partition table y/n
+-------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------
 Version: 2024-07-10
@@ -46,3 +55,5 @@ MD5:0da36b8cea6ab2feca2e3cae787238d4
 TR: Display burn progress bar
 CR: Change downloading addr to 0x10000000
 -------------------------------------------------------------------------------
+
+
