--- a/mcu-firmware/README
+++ b/mcu-firmware/README
@@ -10,13 +10,21 @@ Release Notes
 ===============================================================================
 
 -------------------------------------------------------------------------------
-Release Version: 2.4
-MD5:9304bded3b9f02d5b9ef3dbce3edee50
+Release Version: 2.5
+MD5:2343af01d84b441afa61609325da8054
 -------------------------------------------------------------------------------
 
 -----------+
 Change Log |
 -----------+
+
+-------------------------------------------------------------------------------
+Version: 2.5, 2024-07-22
+MD5:2343af01d84b441afa61609325da8054
+-------------------------------------------------------------------------------
+CR: Support som console redirection to UART or Telnet.
+TR: Make the four buttons(Power, SOC Reset, Recovery, MCU RESET) be handled as
+    soon as the MCU LED is on.
 
 -------------------------------------------------------------------------------
 Version: 2.4, 2024-06-27
